WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44279
[CHROMIUM] Assert w/canvas image draw
https://bugs.webkit.org/show_bug.cgi?id=44279
Summary
[CHROMIUM] Assert w/canvas image draw
Stephen White
Reported
2010-08-19 11:33:18 PDT
Open
http://ie.microsoft.com/testdrive/Performance/HamsterDanceRevolution/Default.html
in a Debug Win chrome build w/--enable-accelerated-compositing and --enable-accelerated-2d-canvas Start game, assert in ImageSkia.cpp:422. Open LayoutTests/fast/canvas/arc360.html No arc is drawn.
Attachments
Patch
(3.54 KB, patch)
2010-08-19 11:49 PDT
,
Stephen White
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2010-08-19 11:49:05 PDT
Created
attachment 64882
[details]
Patch
James Robinson
Comment 2
2010-08-19 12:34:17 PDT
I'm not a reviewer, but this looks great to me.
Kenneth Russell
Comment 3
2010-08-19 13:14:05 PDT
Comment on
attachment 64882
[details]
Patch Looks good to me.
Stephen White
Comment 4
2010-08-19 14:13:43 PDT
Committed
r65700
: <
http://trac.webkit.org/changeset/65700
>
WebKit Review Bot
Comment 5
2010-08-19 16:43:42 PDT
http://trac.webkit.org/changeset/65700
might have broken SnowLeopard Intel Release (Tests) The following changes are on the blame list:
http://trac.webkit.org/changeset/65699
http://trac.webkit.org/changeset/65700
http://trac.webkit.org/changeset/65701
http://trac.webkit.org/changeset/65702
http://trac.webkit.org/changeset/65703
http://trac.webkit.org/changeset/65704
http://trac.webkit.org/changeset/65705
http://trac.webkit.org/changeset/65706
http://trac.webkit.org/changeset/65707
http://trac.webkit.org/changeset/65708
http://trac.webkit.org/changeset/65709
http://trac.webkit.org/changeset/65710
http://trac.webkit.org/changeset/65711
http://trac.webkit.org/changeset/65712
http://trac.webkit.org/changeset/65713
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug