WebCore/platform/graphics/skia/GraphicsContextSkia.cpp
@@ -323,7 +323,6 @@ void GraphicsContext::addPath(const Path& path)
 {
     if (paintingDisabled())
         return;
-    platformContext()->prepareForSoftwareDraw();
     platformContext()->addPath(*path.platformPath());
 }
 
@@ -331,7 +330,6 @@ void GraphicsContext::beginPath()
 {
     if (paintingDisabled())
         return;
-    platformContext()->prepareForSoftwareDraw();
     platformContext()->beginPath();
 }
 
